Goblin Slayer/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files\BlueJ\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
11
-classpath
C:\Program Files\BlueJ\lib\bluejcore.jar;C:\Program Files\BlueJ\lib\junit-4.11.jar;C:\Program Files\BlueJ\lib\hamcrest-core-1.3.jar;C:\Program Files\BlueJ\lib\lang-stride.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.base.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.controls.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.fxml.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.graphics.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.media.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.properties.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.swing.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.web.jar;D:\QMUL\Semester 2\OOP\Exercises\Goblin Slayer
-d
D:\QMUL\Semester 2\OOP\Exercises\Goblin Slayer\doc
-encoding
UTF-8
-charset
UTF-8
D:\QMUL\Semester 2\OOP\Exercises\Goblin Slayer\Story.java
<---- end of javadoc command ---->
Loading source file D:\QMUL\Semester 2\OOP\Exercises\Goblin Slayer\Story.java...
D:\QMUL\Semester 2\OOP\Exercises\Goblin Slayer\Story.java:17: error: <identifier> expected
    barItems.add("Delicious Stew");
                ^
D:\QMUL\Semester 2\OOP\Exercises\Goblin Slayer\Story.java:17: error: illegal start of type
    barItems.add("Delicious Stew");
                 ^
2 errors
